fix: API User's appoitments, Appoitment Cancelation, Review
